argocd-config/resources/argocd-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  name: argocd-server
spec:
  rules:
    - host: argocd.int.babyvelociraptor.com
      http:
        paths:
          - path:
            backend:
              serviceName: argocd-server
              servicePort: http
  tls:
    - hosts:
      - argocd.int.babyvelociraptor.com
      secretName: tls-secret
